fastmetrics-derive/tests/ui/fail/label_set/missing_encode_label_value.rs
use fastmetrics_derive::LabelSet;

#[derive(LabelSet)]
struct Labels {
    status: HttpStatus,
}

struct HttpStatus(u16);

fn main() {}
