fastmetrics-derive/tests/ui/fail/label_set/missing_encode_label_value.stderr
error[E0277]: the trait bound `HttpStatus: EncodeLabelValue` is not satisfied
 --> tests/ui/fail/label_set/missing_encode_label_value.rs:3:10
  |
3 | #[derive(LabelSet)]
  |          ^^^^^^^^ unsatisfied trait bound
  |
help: the trait `EncodeLabelValue` is not implemented for `HttpStatus`
 --> tests/ui/fail/label_set/missing_encode_label_value.rs:8:1
  |
8 | struct HttpStatus(u16);
  | ^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `EncodeLabelValue`:
            &'a T
            &'a mut T
            Arc<T>
            Box<T>
            Cow<'a, T>
            Option<T>
            Rc<T>
            String
          and $N others
  = note: required for `&HttpStatus` to implement `EncodeLabelValue`
  = note: required for `(&'static str, &HttpStatus)` to implement `EncodeLabel`
  = note: required for the cast from `&(&'static str, &HttpStatus)` to `&dyn EncodeLabel`
  = note: this error originates in the derive macro `LabelSet` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `HttpStatus: EncodeLabelValue` is not satisfied
 --> tests/ui/fail/label_set/missing_encode_label_value.rs:3:10
  |
3 | #[derive(LabelSet)]
  |          ^^^^^^^^ unsatisfied trait bound
  |
help: the trait `EncodeLabelValue` is not implemented for `HttpStatus`
 --> tests/ui/fail/label_set/missing_encode_label_value.rs:8:1
  |
8 | struct HttpStatus(u16);
  | ^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `EncodeLabelValue`:
            &'a T
            &'a mut T
            Arc<T>
            Box<T>
            Cow<'a, T>
            Option<T>
            Rc<T>
            String
          and $N others
  = note: this error originates in the derive macro `LabelSet` (in Nightly builds, run with -Z macro-backtrace for more info)
